--- a/experiments/thin_plate_splines/TPS.ipynb
+++ b/experiments/thin_plate_splines/TPS.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,10 @@
     "from collections import Counter\n",
     "from PIL import Image\n",
     "from scipy.interpolate import Rbf\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import RANSACRegressor\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import make_pipeline"
    ]
   },
   {
@@ -67,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +197,7 @@
     "    new_src_y = [point for point, delta in zip(src_y, delta_combo) if delta == np.True_]\n",
     "    new_dst_y = [point for point, delta in zip(dst_y, delta_combo) if delta == np.True_]\n",
     "\n",
+    "\n",
     "    # plt.imshow(image)\n",
     "    # plt.scatter(src_x, src_y, color='blue', label='Source Points')\n",
     "    # plt.scatter(dst_x, dst_y, color='red', label='Destination Points')\n",
@@ -241,9 +245,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(87987) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(87989) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88008) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88010) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88020) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88029) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88039) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88040) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88049) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88050) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88059) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88066) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88077) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88078) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88088) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88089) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88098) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88099) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88108) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88109) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88119) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88120) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88129) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88130) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88140) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88141) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88150) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88151) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88160) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88161) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88170) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88171) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88172) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88173) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88191) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88192) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88201) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88202) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
    "source": [
     "for sheet, yolo_bbs in yolo_data.items():\n",
     "    # get path to current image\n",
@@ -253,6 +302,157 @@
     "    # get the sheet's bounding boxes\n",
     "    sheet_bbs = [BoundingBox.from_yolo(bb, DESIRED_IMAGE_WIDTH, DESIRED_IMAGE_HEIGHT) for bb in yolo_bbs]\n",
     "    transformed_img = tps_transform(resized_img, sheet_bbs, landmarks)\n",
+    "    transformed_img = Image.fromarray(transformed_img)\n",
+    "    transformed_img.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tps_transform_ransac(image, src_points: List[BoundingBox], dst_points: List[BoundingBox]):\n",
+    "\n",
+    "    # get the categories from dst_points\n",
+    "    landmark_cats = [bb.category for bb in dst_points]\n",
+    "    # remove all bbs in src that are not in those categories\n",
+    "    src_points = [bb for bb in src_points if bb.category in landmark_cats]\n",
+    "    # get list of duplicate keys\n",
+    "    duplicate_count_src = dict(Counter([bb.category for bb in src_points]))\n",
+    "    duplicates = [k for k, v in duplicate_count_src.items() if v > 1]\n",
+    "    duplicate_count_dst = dict(Counter([bb.category for bb in dst_points]))\n",
+    "    duplicates.extend([k for k, v in duplicate_count_dst.items() if v > 1])\n",
+    "    duplicates = list(set(duplicates)) \n",
+    "    # print(duplicates)\n",
+    "    # remove duplicates\n",
+    "    src_points = [bb for bb in src_points if bb.category not in duplicates]\n",
+    "    dst_points = [bb for bb in dst_points if bb.category not in duplicates]\n",
+    "    # sort categories alphabetically\n",
+    "    src_points = sorted(src_points, key = lambda bb: bb.category)\n",
+    "    # print([bb.category for bb in src_points])\n",
+    "    dst_points = sorted(dst_points, key = lambda bb: bb.category)\n",
+    "    # print([bb.category for bb in dst_points])\n",
+    "\n",
+    "    src_points = np.array([[bb.left, bb.top] for bb in src_points], dtype=np.float32)\n",
+    "    dst_points = np.array([[bb.left, bb.top] for bb in dst_points], dtype=np.float32)\n",
+    "\n",
+    "    _, mask = cv2.findHomography(dst_points, src_points, method=cv2.RANSAC, ransacReprojThreshold=10.0, maxIters=5000, confidence=0.99)\n",
+    "    inlier_mask = mask.ravel() == 1\n",
+    "\n",
+    "    filtered_src = src_points[inlier_mask]\n",
+    "    filtered_dst = dst_points[inlier_mask]\n",
+    "\n",
+    "    new_src_x, new_src_y = filtered_src[:, 0], filtered_src[:, 1]\n",
+    "    new_dst_x, new_dst_y = filtered_dst[:, 0], filtered_dst[:, 1]\n",
+    "\n",
+    "    if len(new_src_x) < 4:\n",
+    "        return image\n",
+    "\n",
+    "    # plt.imshow(image)\n",
+    "    # plt.scatter(src_x, src_y, color='blue', label='Source Points')\n",
+    "    # plt.scatter(dst_x, dst_y, color='red', label='Destination Points')\n",
+    "    # plt.legend()\n",
+    "    # plt.title(\"Source and Destination Control Points\")\n",
+    "    # plt.show()\n",
+    "\n",
+    "    # use RBF function to do the thin plate splines\n",
+    "    rbf_x = Rbf(new_dst_x, new_dst_y, new_src_x, function=\"thin_plate\")\n",
+    "    rbf_y = Rbf(new_dst_x, new_dst_y, new_src_y, function=\"thin_plate\")\n",
+    "\n",
+    "\n",
+    "    # Alter the image according to the transformation\n",
+    "    h, w, _ = image.shape\n",
+    "    # create grid\n",
+    "    x = np.linspace(0, w-1, w)\n",
+    "    y = np.linspace(0, h-1, h)\n",
+    "    grid_x, grid_y = np.meshgrid(x, y)\n",
+    "\n",
+    "    # apply the transformation\n",
+    "    # reshape into grid\n",
+    "    transformed_x = rbf_x(grid_x, grid_y).astype(np.float32)\n",
+    "    transformed_y = rbf_y(grid_x, grid_y).astype(np.float32)\n",
+    "\n",
+    "    transformed_x = np.clip(transformed_x, 0, image.shape[1] - 1)\n",
+    "    transformed_y = np.clip(transformed_y, 0, image.shape[0] - 1)\n",
+    "\n",
+    "\n",
+    "    # print(f\"Transformed X range: {np.min(transformed_x)}, {np.max(transformed_x)}\")\n",
+    "    # print(f\"Transformed Y range: {np.min(transformed_y)}, {np.max(transformed_y)}\")\n",
+    "\n",
+    "    # plt.imshow(transformed_x, cmap='coolwarm', interpolation='nearest')\n",
+    "    # plt.title(\"Transformed X Coordinates\")\n",
+    "    # plt.show()\n",
+    "\n",
+    "    # plt.imshow(transformed_y, cmap='coolwarm', interpolation='nearest')\n",
+    "    # plt.title(\"Transformed Y Coordinates\")\n",
+    "    # plt.show()\n",
+    "\n",
+    "    # warp the image\n",
+    "    warp_img = cv2.remap(image, transformed_x, transformed_y, interpolation=cv2.INTER_LINEAR)\n",
+    "\n",
+    "    return warp_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(88211) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88212) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88221) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88222) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88232) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88233) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88242) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88243) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88252) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88253) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88262) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88263) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88272) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88273) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88283) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88284) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88293) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88294) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88303) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88304) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88313) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88314) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88323) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88324) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88334) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88335) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88344) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88345) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88354) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88363) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88365) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88366) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88384) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88385) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88394) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88395) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88404) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(88405) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sheet, yolo_bbs in yolo_data.items():\n",
+    "    # get path to current image\n",
+    "    full_image_path = os.path.join(PATH_TO_REGISTERED_IMAGES, sheet)\n",
+    "    image = cv2.imread(full_image_path)\n",
+    "    resized_img = cv2.resize(image, (DESIRED_IMAGE_WIDTH, DESIRED_IMAGE_HEIGHT))\n",
+    "    # get the sheet's bounding boxes\n",
+    "    sheet_bbs = [BoundingBox.from_yolo(bb, DESIRED_IMAGE_WIDTH, DESIRED_IMAGE_HEIGHT) for bb in yolo_bbs]\n",
+    "    transformed_img = tps_transform_ransac(resized_img, sheet_bbs, landmarks)\n",
     "    transformed_img = Image.fromarray(transformed_img)\n",
     "    transformed_img.show()\n"
    ]
