BB centers and CPD proposal

--- a/point_registration/pointreg_proposal.ipynb
+++ b/point_registration/pointreg_proposal.ipynb
@@ -215,7 +215,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load yolo_data.json\n",
+    "PATH_TO_YOLO_DATA = \"../../data/yolo_data.json\"\n",
+    "PATH_TO_REGISTERED_IMAGES = \"../../data/registered_images\"\n",
+    "UNIFIED_IMAGE_PATH = (\n",
+    "    \"../../data/unified_intraoperative_preoperative_flowsheet_v1_1_front.png\"\n",
+    ")\n",
+    "\n",
+    "# Load yolo_data.json\n",
+    "with open(PATH_TO_YOLO_DATA) as json_file:\n",
+    "    yolo_data = json.load(json_file)\n",
+    "\n",
+    "# See how many intraoperative images are registered\n",
+    "print(f\"Found {len(yolo_data)} sheets in yolo_data.json\")\n",
+    "\n",
+    "# Load the json for bp and hr cluster locations\n",
+    "PATH_TO_CLUSTER_LOCATIONS = \"../../data/bp_and_hr_cluster_locations.json\"\n",
+    "with open(PATH_TO_CLUSTER_LOCATIONS) as json_file:\n",
+    "    bp_hr_cluster_locations = json.load(json_file)\n",
+    "    print(\n",
+    "        f\"Found {len(bp_hr_cluster_locations)} items in bp_and_hr_cluster_locations.json\"\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
