Fixed the process

--- a/experiments/thin_plate_splines/TPS.ipynb
+++ b/experiments/thin_plate_splines/TPS.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 19 sheets in yolo_data.json\n"
+      "Found 22 sheets in yolo_data.json\n"
      ]
     }
    ],
@@ -553,16 +553,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "from scipy.interpolate import Rbf\n",
-    "from collections import Counter\n",
-    "from typing import List\n",
-    "\n",
     "def transform_thin_plate_splines(\n",
     "    image: np.ndarray,\n",
     "    src_bbs: List[BoundingBox],\n",
@@ -634,51 +628,62 @@
     "    filtered_src = src_points[inlier_mask]\n",
     "    filtered_dst = dst_points[inlier_mask]\n",
     "\n",
-    "    if len(filtered_src) < 4:\n",
-    "        return image  # Not enough inliers for TPS\n",
+    "    # Important change: Scale points back to original space for RBF computation\n",
+    "    filtered_src_full = filtered_src / downscale_factor\n",
+    "    filtered_dst_full = filtered_dst / downscale_factor\n",
     "\n",
-    "    # Apply Thin Plate Splines using RBF\n",
-    "    rbf_x = Rbf(filtered_dst[:, 0], filtered_dst[:, 1], filtered_src[:, 0] - filtered_dst[:, 0], function=\"thin_plate\")\n",
-    "    rbf_y = Rbf(filtered_dst[:, 0], filtered_dst[:, 1], filtered_src[:, 1] - filtered_dst[:, 1], function=\"thin_plate\")\n",
+    "    if len(filtered_src_full) < 4:\n",
+    "        return image\n",
     "\n",
-    "    # Generate a low-res grid for memory-efficient TPS\n",
-    "    small_grid_x, small_grid_y = np.meshgrid(np.linspace(0, small_w - 1, small_w), np.linspace(0, small_h - 1, small_h))\n",
+    "    # Apply TPS using absolute coordinates instead of displacements\n",
+    "    rbf_x = Rbf(filtered_dst_full[:, 0], filtered_dst_full[:, 1], \n",
+    "                filtered_src_full[:, 0], function=\"thin_plate\")\n",
+    "    rbf_y = Rbf(filtered_dst_full[:, 0], filtered_dst_full[:, 1], \n",
+    "                filtered_src_full[:, 1], function=\"thin_plate\")\n",
     "\n",
-    "    # Compute displacement fields at low resolution\n",
-    "    disp_x_small = rbf_x(small_grid_x, small_grid_y).astype(np.float32)\n",
-    "    disp_y_small = rbf_y(small_grid_x, small_grid_y).astype(np.float32)\n",
+    "    # Generate grid at original resolution\n",
+    "    grid_x, grid_y = np.meshgrid(\n",
+    "        np.linspace(0, w - 1, w),\n",
+    "        np.linspace(0, h - 1, h)\n",
+    "    )\n",
     "\n",
-    "    # Upscale displacement fields to full resolution\n",
-    "    disp_x_large = cv2.resize(disp_x_small, (w, h), interpolation=cv2.INTER_CUBIC)\n",
-    "    disp_y_large = cv2.resize(disp_y_small, (w, h), interpolation=cv2.INTER_CUBIC)\n",
+    "    # Compute the transformed coordinates\n",
+    "    transformed_x = rbf_x(grid_x, grid_y).astype(np.float32)\n",
+    "    transformed_y = rbf_y(grid_x, grid_y).astype(np.float32)\n",
     "\n",
-    "    # Compute final absolute positions\n",
-    "    grid_x, grid_y = np.meshgrid(np.arange(w), np.arange(h))\n",
-    "    transformed_x = np.clip(grid_x + disp_x_large, 0, w - 1)\n",
-    "    transformed_y = np.clip(grid_y + disp_y_large, 0, h - 1)\n",
+    "    # Clip to image boundaries\n",
+    "    transformed_x = np.clip(transformed_x, 0, w - 1)\n",
+    "    transformed_y = np.clip(transformed_y, 0, h - 1)\n",
     "\n",
-    "    # Apply transformation to the original image\n",
-    "    warped_large = cv2.remap(image, transformed_x.astype(np.float32), transformed_y.astype(np.float32), interpolation=cv2.INTER_LINEAR)\n",
+    "    # Apply the transformation\n",
+    "    warped = cv2.remap(\n",
+    "        image, \n",
+    "        transformed_x, \n",
+    "        transformed_y, \n",
+    "        interpolation=cv2.INTER_CUBIC,\n",
+    "        borderMode=cv2.BORDER_REFLECT\n",
+    "    )\n",
     "\n",
-    "    return warped_large\n"
+    "    return warped\n",
+    "\n",
+    "# Function to visualize the transformation\n",
+    "def visualize_transformation(image, transformed_image):\n",
+    "    cv2.imshow(\"Original Image\", image)\n",
+    "    cv2.imshow(\"Transformed Image\", transformed_image)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 207.65 MiB, increment: 6.82 MiB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%memit\n",
     "for sheet, yolo_bbs in yolo_data.items():\n",
+    "    if sheet != \"RC_0031_intraoperative.JPG\":\n",
+    "        continue\n",
     "    # get path to current image\n",
     "    full_image_path = os.path.join(PATH_TO_REGISTERED_IMAGES, sheet)\n",
     "    image = cv2.imread(full_image_path)\n",
@@ -688,10 +693,26 @@
     "        BoundingBox.from_yolo(bb, DESIRED_IMAGE_WIDTH, DESIRED_IMAGE_HEIGHT)\n",
     "        for bb in yolo_bbs\n",
     "    ]\n",
-    "    transformed_img = transform_thin_plate_splines(resized_img, sheet_bbs, landmarks)\n",
-    "    transformed_img = Image.fromarray(transformed_img)\n",
-    "    transformed_img.show()\n",
-    "    break"
+    "    transformed_img_arr = transform_thin_plate_splines(resized_img, sheet_bbs, landmarks)\n",
+    "    transformed_img = Image.fromarray(transformed_img_arr)\n",
+    "\n",
+    "    #Overlay this image with the original as a sanity check to make sure the transformation is correct\n",
+    "    # Should used image from above as well as transformed_img_arr\n",
+    "    transformed_img = cv2.cvtColor(transformed_img_arr, cv2.COLOR_BGR2RGB)\n",
+    "    # Get data/unified_intraoperative_preoperative_flowsheet_v1_1_back.png\n",
+    "    unified = cv2.imread(\"../../data/unified_intraoperative_preoperative_flowsheet_v1_1_front.png\")\n",
+    "    resized_unified = cv2.resize(unified, (DESIRED_IMAGE_WIDTH, DESIRED_IMAGE_HEIGHT))\n",
+    "    # Show original overlay\n",
+    "    overlay = cv2.addWeighted(resized_unified, 0.5, resized_img, 0.5, 0)\n",
+    "    overlay = Image.fromarray(overlay)\n",
+    "    # Add a name to the window\n",
+    "    overlay.name = \"Original Overlay\"\n",
+    "    overlay.show()\n",
+    "    overlay = cv2.addWeighted(resized_unified, 0.5, transformed_img, 0.5, 0)\n",
+    "    overlay = Image.fromarray(overlay)\n",
+    "    # Add a name to the window\n",
+    "    overlay.name = \"Transformed Overlay\"\n",
+    "    overlay.show()\n"
    ]
   },
   {
