--- a/experiments/thin_plate_splines/TPS.ipynb
+++ b/experiments/thin_plate_splines/TPS.ipynb
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,33 +561,20 @@
     "    image: np.ndarray,\n",
     "    src_bbs: List[BoundingBox],\n",
     "    dst_bbs: List[BoundingBox],\n",
-    "    max_dist: float = 4.0,\n",
     "    threshold: float = 10.0,\n",
-    "    max_iters: int = 5000,\n",
-    "    confidence_limit: float = 0.99,\n",
-    "    downscale_factor: float = 0.25,  # New parameter to control the downscaling factor\n",
+    "    downscale_factor: float = 0.25,\n",
     ") -> np.ndarray:\n",
     "    \"\"\"\n",
-    "    Perform a memory-efficient thin plate spline transformation by computing the warp field at low resolution.\n",
-    "\n",
-    "    Args:\n",
-    "        image (np.ndarray): The image to be transformed.\n",
-    "        src_bbs (List[BoundingBox]): List of source BoundingBox objects.\n",
-    "        dst_bbs (List[BoundingBox]): List of destination BoundingBox objects.\n",
-    "        max_dist (float, optional): Maximum distance to filter out points. Defaults to 4.0.\n",
-    "        threshold (float, optional): Threshold distance for RANSAC. Defaults to 10.0.\n",
-    "        max_iters (int, optional): Maximum iterations for RANSAC. Defaults to 5000.\n",
-    "        confidence_limit (float, optional): Confidence limit for RANSAC. Defaults to 0.99.\n",
-    "        downscale_factor (float, optional): Factor by which to downscale the image before computing the transformation. Defaults to 0.25.\n",
-    "\n",
-    "    Returns:\n",
-    "        np.ndarray: The transformed image.\n",
+    "    Perform a memory-efficient thin plate spline transformation.\n",
     "    \"\"\"\n",
     "    # Image dimensions\n",
     "    h, w = image.shape[:2]\n",
     "    small_h, small_w = int(h * downscale_factor), int(w * downscale_factor)\n",
     "\n",
-    "    # Scale bounding boxes\n",
+    "    # Scale down image first to save memory\n",
+    "    small_image = cv2.resize(image, (small_w, small_h))\n",
+    "\n",
+    "    # Process at low resolution\n",
     "    def scale_bbs(bbs, factor):\n",
     "        return [\n",
     "            BoundingBox(\n",
@@ -599,68 +586,71 @@
     "            ) for bb in bbs\n",
     "        ]\n",
     "\n",
+    "    # Scale bounding boxes\n",
     "    scaled_src_bbs = scale_bbs(src_bbs, downscale_factor)\n",
     "    scaled_dst_bbs = scale_bbs(dst_bbs, downscale_factor)\n",
     "\n",
-    "    # Remove duplicate category points\n",
+    "    # Remove duplicates and sort\n",
     "    duplicate_cats = {k for k, v in Counter([bb.category for bb in scaled_src_bbs]).items() if v > 1}\n",
     "    duplicate_cats |= {k for k, v in Counter([bb.category for bb in scaled_dst_bbs]).items() if v > 1}\n",
-    "\n",
+    "    \n",
     "    scaled_src_bbs = [bb for bb in scaled_src_bbs if bb.category not in duplicate_cats]\n",
     "    scaled_dst_bbs = [bb for bb in scaled_dst_bbs if bb.category not in duplicate_cats]\n",
-    "\n",
-    "    # Sort bounding boxes by category\n",
+    "    \n",
     "    scaled_src_bbs.sort(key=lambda bb: bb.category)\n",
     "    scaled_dst_bbs.sort(key=lambda bb: bb.category)\n",
     "\n",
-    "    # Extract bounding box centers\n",
-    "    def get_centers(bbs):\n",
-    "        return np.array(\n",
-    "            [[(bb.left + bb.right) / 2, (bb.top + bb.bottom) / 2] for bb in bbs], dtype=np.float32\n",
-    "        )\n",
+    "    # Get center points\n",
+    "    src_points = np.array([[\n",
+    "        (bb.left + bb.right) / 2, \n",
+    "        (bb.top + bb.bottom) / 2\n",
+    "    ] for bb in scaled_src_bbs], dtype=np.float32)\n",
+    "    \n",
+    "    dst_points = np.array([[\n",
+    "        (bb.left + bb.right) / 2, \n",
+    "        (bb.top + bb.bottom) / 2\n",
+    "    ] for bb in scaled_dst_bbs], dtype=np.float32)\n",
     "\n",
-    "    src_points = get_centers(scaled_src_bbs)\n",
-    "    dst_points = get_centers(scaled_dst_bbs)\n",
-    "\n",
-    "    # Apply RANSAC filtering\n",
-    "    _, mask = cv2.findHomography(dst_points, src_points, method=cv2.RANSAC, ransacReprojThreshold=threshold)\n",
-    "    inlier_mask = mask.ravel() == 1\n",
-    "    filtered_src = src_points[inlier_mask]\n",
-    "    filtered_dst = dst_points[inlier_mask]\n",
-    "\n",
-    "    # Important change: Scale points back to original space for RBF computation\n",
-    "    filtered_src_full = filtered_src / downscale_factor\n",
-    "    filtered_dst_full = filtered_dst / downscale_factor\n",
-    "\n",
-    "    if len(filtered_src_full) < 4:\n",
+    "    if len(src_points) < 4:\n",
     "        return image\n",
     "\n",
-    "    # Apply TPS using absolute coordinates instead of displacements\n",
-    "    rbf_x = Rbf(filtered_dst_full[:, 0], filtered_dst_full[:, 1], \n",
-    "                filtered_src_full[:, 0], function=\"thin_plate\")\n",
-    "    rbf_y = Rbf(filtered_dst_full[:, 0], filtered_dst_full[:, 1], \n",
-    "                filtered_src_full[:, 1], function=\"thin_plate\")\n",
-    "\n",
-    "    # Generate grid at original resolution\n",
-    "    grid_x, grid_y = np.meshgrid(\n",
-    "        np.linspace(0, w - 1, w),\n",
-    "        np.linspace(0, h - 1, h)\n",
+    "    # Calculate displacement field\n",
+    "    rbf_x = Rbf(\n",
+    "        dst_points[:, 0], dst_points[:, 1],\n",
+    "        src_points[:, 0] - dst_points[:, 0],\n",
+    "        function='thin_plate'\n",
+    "    )\n",
+    "    rbf_y = Rbf(\n",
+    "        dst_points[:, 0], dst_points[:, 1],\n",
+    "        src_points[:, 1] - dst_points[:, 1],\n",
+    "        function='thin_plate'\n",
     "    )\n",
     "\n",
-    "    # Compute the transformed coordinates\n",
-    "    transformed_x = rbf_x(grid_x, grid_y).astype(np.float32)\n",
-    "    transformed_y = rbf_y(grid_x, grid_y).astype(np.float32)\n",
+    "    # Create small grid\n",
+    "    y, x = np.mgrid[0:small_h, 0:small_w].astype(np.float32)\n",
+    "    \n",
+    "    # Calculate displacements\n",
+    "    dx = rbf_x(x, y).astype(np.float32)\n",
+    "    dy = rbf_y(x, y).astype(np.float32)\n",
     "\n",
-    "    # Clip to image boundaries\n",
-    "    transformed_x = np.clip(transformed_x, 0, w - 1)\n",
-    "    transformed_y = np.clip(transformed_y, 0, h - 1)\n",
+    "    # Add displacements to get final coordinates\n",
+    "    map_x = (x + dx)\n",
+    "    map_y = (y + dy)\n",
     "\n",
-    "    # Apply the transformation\n",
+    "    # Scale back to original resolution\n",
+    "    map_x = cv2.resize(map_x, (w, h)) * (1/downscale_factor)\n",
+    "    map_y = cv2.resize(map_y, (w, h)) * (1/downscale_factor)\n",
+    "\n",
+    "    # Ensure coordinates are within bounds\n",
+    "    map_x = np.clip(map_x, 0, w - 1)\n",
+    "    map_y = np.clip(map_y, 0, h - 1)\n",
+    "\n",
+    "    # Apply transformation\n",
     "    warped = cv2.remap(\n",
-    "        image, \n",
-    "        transformed_x, \n",
-    "        transformed_y, \n",
-    "        interpolation=cv2.INTER_CUBIC,\n",
+    "        image,\n",
+    "        map_x.astype(np.float32),\n",
+    "        map_y.astype(np.float32),\n",
+    "        interpolation=cv2.INTER_LINEAR,\n",
     "        borderMode=cv2.BORDER_REFLECT\n",
     "    )\n",
     "\n",
@@ -676,9 +666,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 241.33 MiB, increment: 45.27 MiB\n"
+     ]
+    }
+   ],
    "source": [
     "%%memit\n",
     "for sheet, yolo_bbs in yolo_data.items():\n",
@@ -695,6 +693,7 @@
     "    ]\n",
     "    transformed_img_arr = transform_thin_plate_splines(resized_img, sheet_bbs, landmarks)\n",
     "    transformed_img = Image.fromarray(transformed_img_arr)\n",
+    "    transformed_img.show()\n",
     "\n",
     "    #Overlay this image with the original as a sanity check to make sure the transformation is correct\n",
     "    # Should used image from above as well as transformed_img_arr\n",
