This works great at this moment, want to incorporate distance and RANSAC

--- a/experiments/thin_plate_splines/TPS.ipynb
+++ b/experiments/thin_plate_splines/TPS.ipynb
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,10 @@
     }
    ],
    "source": [
+    "%%memit\n",
     "for sheet, yolo_bbs in yolo_data.items():\n",
+    "    if sheet != \"RC_0031_intraoperative.JPG\":\n",
+    "        continue\n",
     "    # get path to current image\n",
     "    full_image_path = os.path.join(PATH_TO_REGISTERED_IMAGES, sheet)\n",
     "    image = cv2.imread(full_image_path)\n",
@@ -452,9 +455,26 @@
     "        BoundingBox.from_yolo(bb, DESIRED_IMAGE_WIDTH, DESIRED_IMAGE_HEIGHT)\n",
     "        for bb in yolo_bbs\n",
     "    ]\n",
-    "    transformed_img = tps_transform_ransac(resized_img, sheet_bbs, landmarks)\n",
-    "    transformed_img = Image.fromarray(transformed_img)\n",
-    "    transformed_img.show()\n"
+    "    transformed_img_arr = tps_transform_ransac(resized_img, sheet_bbs, landmarks)\n",
+    "    transformed_img = Image.fromarray(transformed_img_arr)\n",
+    "\n",
+    "    #Overlay this image with the original as a sanity check to make sure the transformation is correct\n",
+    "    # Should used image from above as well as transformed_img_arr\n",
+    "    transformed_img = cv2.cvtColor(transformed_img_arr, cv2.COLOR_BGR2RGB)\n",
+    "    # Get data/unified_intraoperative_preoperative_flowsheet_v1_1_back.png\n",
+    "    unified = cv2.imread(\"../../data/unified_intraoperative_preoperative_flowsheet_v1_1_front.png\")\n",
+    "    resized_unified = cv2.resize(unified, (DESIRED_IMAGE_WIDTH, DESIRED_IMAGE_HEIGHT))\n",
+    "    # Show original overlay\n",
+    "    overlay = cv2.addWeighted(resized_unified, 0.5, resized_img, 0.5, 0)\n",
+    "    overlay = Image.fromarray(overlay)\n",
+    "    # Add a name to the window\n",
+    "    overlay.name = \"Original Overlay\"\n",
+    "    overlay.show()\n",
+    "    overlay = cv2.addWeighted(resized_unified, 0.5, transformed_img, 0.5, 0)\n",
+    "    overlay = Image.fromarray(overlay)\n",
+    "    # Add a name to the window\n",
+    "    overlay.name = \"Transformed Overlay\"\n",
+    "    overlay.show()\n"
    ]
   },
   {
@@ -553,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,14 +686,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 241.33 MiB, increment: 45.27 MiB\n"
+      "peak memory: 235.77 MiB, increment: 39.69 MiB\n"
      ]
     }
    ],
@@ -693,7 +713,6 @@
     "    ]\n",
     "    transformed_img_arr = transform_thin_plate_splines(resized_img, sheet_bbs, landmarks)\n",
     "    transformed_img = Image.fromarray(transformed_img_arr)\n",
-    "    transformed_img.show()\n",
     "\n",
     "    #Overlay this image with the original as a sanity check to make sure the transformation is correct\n",
     "    # Should used image from above as well as transformed_img_arr\n",
